<resources>
    <string name="app_name">[Woodlands]</string>
    <string name="enter_woodland_title"> Please enter a Woodland Title </string>
    <string name="button_addWoodland">Add Woodland</string>
    <string name="button_delete">Delete</string>
    <string name="menu_cancelWoodland">Cancel</string>
    <string name="menu_deleteWoodland">Delete</string>
    <string name="menu_addWoodland">Add Woodland</string>
    <string name="menu_goHome">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="change_woodland_image">Add Image</string>
    <string name="save_woodland"> Save Woodland </string>
    <string name="select_woodland_image">Select woodland image</string>
    <string name="button_addImage"> Add Image </string>
    <string name="location_heading">Location</string>
    <string name="woodland_location">Location</string>
    <string name="woodland_type">Woodland Category</string>
    <string name="woodland_amenity">Woodland Amenity</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_woodland_maps">Map</string>
    <string name="checkbox_message">"Visited Today"</string>
    <string name="checkbox_message_carpark">"Carpark"</string>
    <string name="checkbox_message_toilets">"Toilets"</string>
    <string name="checkbox_message_shop">"Shop"</string>
    <string name="checkbox_conifer">"Conifer"</string>
    <string name="checkbox_broadleaf">"Broadleaf"</string>
    <string name="checkbox_mixed">"Mixed"</string>
    <string name="hint_woodlandTitle">Woodland Title</string>
    <string name="hint_woodlandDescription">Description </string>
    <string name="hint_woodlandNotes">Additional Notes</string>
    <string name="button_chooseSignUp">Sign Up</string>
    <string name="button_chooseLogin">Log In</string>
    <string name="welcome_message">Welcome to Woodlands!</string>
    <string name="signup_message">Sign Up</string>
    <string name="login_message">Log In</string>
    <string name="hint_signup_email">Email Address</string>
    <string name="hint_signup_password">Password</string>
    <string name="button_signUp">Sign Up</string>
    <string name="button_login">Login</string>
    <string name="hint_login_email">Email Address</string>
    <string name="hint_login_password">Password</string>
    <string name="signup_failed">Email is already registered.</string>
    <string name="login_failed">Login Failed. Incorrect email or password.</string>
    <string name="settings_message">User Settings</string>
    <string name="stats_message">User Stats</string>
    <string name="rating_message">Woodland Star Rating</string>
    <string name="button_update">Update</string>
    <string name="update_failed">Email is already registered.</string>
    <string name="menu_up">Up</string>
    <string name="menu_saveWoodland">Save</string>
    <string name="woodlandPicture">Woodland Image</string>
    <string name="woodlandTitle">Woodland Title</string>
    <string name="woodlandDescription">Woodland Description</string>
    <string name="title_activity_woodland_list">[Woodlands]</string>
    <string name="title_activity_woodland">Edit</string>
    <string name="title_activity_location">Edit Location</string>
    <string name="title_activity_login"> Signup/Login to [Woodlands]</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_showFavourites">Favourites</string>
    <string name="menu_logout">Logout</string>
    <string name="email_address">Email Address</string>
    <string name="password">Update Password</string>
    <string name="latvalue">00.000000</string>
    <string name="lngvalue">00.000000</string>
    <string name="favouritebutton">favouritebutton</string>
    <string name="title_activity_favourite_view">Favourites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search">Search</string>
    <string name="menu_shareWoodland">Share</string>
    <string name="open_nav">navigation_view_opened</string>
    <string name="close_nav">navigation_view_closed</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
</resources>