<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.woodland.views.woodland.WoodlandView">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary"
                android:background="@color/colorPrimaryDark"/>

        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/woodlandTitle"
                    android:layout_width="219dp"
                    android:layout_height="38dp"
                    android:layout_margin="12dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:hint="@string/hint_woodlandTitle"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <requestFocus />
                </EditText>


                <EditText
                    android:id="@+id/description"
                    android:layout_width="216dp"
                    android:layout_height="61dp"
                    android:layout_margin="14dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_woodlandDescription"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:maxLength="25"
                    android:maxLines="8"
                    android:padding="0dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/woodlandTitle" />


                <TextView
                    android:id="@+id/woodlandType"
                    android:layout_width="213dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/woodland_type"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <TextView
                    android:id="@+id/locationHeading"
                    android:layout_width="106dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/location_heading"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintStart_toEndOf="@+id/woodlandTitle"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lng"
                    android:layout_width="106dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/lngvalue"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/description"
                    app:layout_constraintTop_toBottomOf="@+id/lat" />

                <TextView
                    android:id="@+id/lat"
                    android:layout_width="106dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/latvalue"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/woodlandTitle"
                    app:layout_constraintTop_toBottomOf="@+id/locationHeading" />


                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/colorPrimaryDark"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.062"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mapView" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/checkbox_message"
                    app:layout_constraintEnd_toStartOf="@+id/visitDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />


                <TextView
                    android:id="@+id/woodlandAmenity"
                    android:layout_width="213dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/woodland_amenity"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <CheckBox
                    android:id="@+id/checkBoxCarpark"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="8dp"
                    android:text="@string/checkbox_message_carpark"
                    app:layout_constraintEnd_toStartOf="@+id/visitDate"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <CheckBox
                    android:id="@+id/checkBoxToilets"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/checkbox_message_toilets"
                    app:layout_constraintEnd_toStartOf="@+id/visitDate"
                    app:layout_constraintHorizontal_bias="0.255"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <CheckBox
                    android:id="@+id/checkBoxShop"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="380dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/checkbox_message_shop"
                    app:layout_constraintEnd_toStartOf="@+id/visitDate"
                    app:layout_constraintHorizontal_bias="0.267"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <TextView
                    android:id="@+id/visitDate"
                    android:layout_width="227dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/checkBox"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="395dp"
                    android:layout_height="120dp"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hint_woodlandNotes"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.555"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxCarpark" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView2"
                    android:layout_width="359dp"
                    android:layout_height="229dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.312"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chooseImage" />


                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="410dp"
                    android:layout_height="264dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.129"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="328dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/rating_message"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.97"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notes" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:layout_marginBottom="52dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.426"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notes" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/woodlandType">


                    <RadioButton
                        android:id="@+id/rb_conifer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:text="@string/checkbox_conifer"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/woodlandType"
                        tools:layout_editor_absoluteX="6dp"
                        tools:layout_editor_absoluteY="178dp" />

                    <RadioButton
                        android:id="@+id/rb_mixed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkbox_mixed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/woodlandType"
                        tools:layout_editor_absoluteX="104dp"
                        tools:layout_editor_absoluteY="182dp" />

                    <RadioButton
                        android:id="@+id/rb_broadleaf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkbox_broadleaf"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/woodlandType"
                        tools:layout_editor_absoluteX="104dp"
                        tools:layout_editor_absoluteY="182dp" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>