<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.woodland.views.map.WoodlandMapView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:background="@drawable/background"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/background">

                <ImageView
                    android:id="@+id/currentImage"
                    android:layout_width="148dp"
                    android:layout_height="111dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/woodlandPicture"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.763"
                    app:layout_constraintStart_toEndOf="@+id/currentTitle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/woodlogo" />

                <TextView
                    android:id="@+id/currentTitle"
                    android:layout_width="136dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/woodlandTitle"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toStartOf="@+id/currentImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/currentDescription"
                    android:layout_width="156dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/woodlandDescription"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/currentImage"
                    app:layout_constraintHorizontal_bias="0.787"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currentTitle"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/locationHeading"
                    android:layout_width="106dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="248dp"
                    android:text="@string/location_heading"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currentDescription" />

                <TextView
                    android:id="@+id/currentLat"
                    android:layout_width="106dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="248dp"
                    android:text="@string/latvalue"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationHeading" />

                <TextView
                    android:id="@+id/currentLng"
                    android:layout_width="106dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="248dp"
                    android:padding="0dp"
                    android:text="@string/lngvalue"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currentLat" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="410dp"
            android:layout_height="421dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.482" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
